--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/animatecss/animate.css">
   <link rel="stylesheet" href="assets/chatbutton/floating-wpp.css">
-  <link rel="stylesheet" href="assets/popup-overlay-plugin/style.css">
   <link rel="stylesheet" href="assets/smart-cart/minicart-theme.css">
+  <link rel="stylesheet" href="assets/popup-overlay-plugin/style.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/recaptcha.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Assistant:200,300,400,500,600,700,800&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Assistant:200,300,400,500,600,700,800&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=VMlL4d"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=VMlL4d" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=Shjhph"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=Shjhph" type="text/css">
 
   
   
@@ -410,7 +410,7 @@
         <div class="row row-main">
             <div class="col-12 col-lg-6 card mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler form-wrap" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="5leGUvywh7eT0gvsFJt482FIp8+mHXdLQxwWqv0xEt7EEk5HLWewqxVD9SxJ5g17Hg4xkf2D85Q3irort/FL3+a04XyqnwvUqYv3BX443xtRjHnveNxGUSxmdp665Moi.RisZsh9scmTB1RlVLptowO73bZWUNIMf7pMFDI/ensrm9TUfeaCZuF4J77jWaCANrOvzqvgypIsv8NwarnSQKImtu9UVKQfgnRDYj7NBgHATpyNQZkvEkaiwTmv7pXw=">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler form-wrap" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="m9xI6rMcbc78TaR0yHWDyjhjCH4VqXMkusRzM+tqXx5OccGzxLST3j9uGigtPUd7Vc8jRR6VFwg0topqudDhUOFoWrnFGgkgILtqbRpa6ZxefhREJDHGvT7PsFv128OV.w5HYXVbtvuHBc48KKe5zgvRwT+pzmprn4sOafMMXF90cYawOGFml8RM/Nx3UmRFD4cBFORvLr1H/YmfdNW4Wj5AjtMcxWGlkzL9UyXrqJWy/H5kK4LZnaKmW85336fsN">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">:הפרטיים נשלחו בהצלחה</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> ...תקלה לא צפויה </div>
@@ -565,17 +565,17 @@
                 </div>
             </div>
             <div class="col-12 col-lg-8 card">
-                <div id="bootstrap-accordion_10" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
+                <div id="bootstrap-accordion_15" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
                     <div class="card">
                         <div class="card-header" role="tab" id="headingOne">
-                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse1_10" aria-expanded="false" aria-controls="collapse1">
+                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse1_15" aria-expanded="false" aria-controls="collapse1">
                                 <h4 class="panel-title-edit mbr-fonts-style display-5"><p><strong>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;אתה לא צעיר מידי ופחות מנוסה</strong></p></h4>
                                 <span class="icon-wrapper">
                                     <span class="sign mbr-iconfont mobi-mbri-plus mobi-mbri"></span>
                                 </span>
                             </a>
                         </div>
-                        <div id="collapse1_10" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_10">
+                        <div id="collapse1_15" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_15">
                             <div class="panel-body">
                                 <p class="mbr-fonts-style panel-text display-7"><strong>&nbsp;בעייני לא וגם בעיני הלקוחות שלי, עם הידע והטאצ האישי שלי תהיו מרוצים מאוד, בנוסף עצם היותי צעיר זה יתרון, אני נענה מהר לבקשת הלקוח ומוודא שהוא מרוצה ב 100%</strong></p>
                             </div>
@@ -583,7 +583,7 @@
                     </div>
                     <div class="card">
                         <div class="card-header" role="tab" id="headingTwo" style="text-align:right">
-                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse2_10" aria-expanded="false" aria-controls="collapse2">
+                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse2_15" aria-expanded="false" aria-controls="collapse2">
                                 <h4 class="panel-title-edit mbr-fonts-style display-5"><p><strong>
                                     </strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;<strong>תוך כמה זמן יש לי אתר</strong></p></h4>
                                 <span class="icon-wrapper">
@@ -591,7 +591,7 @@
                                 </span>
                             </a>
                         </div>
-                        <div id="collapse2_10" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_10">
+                        <div id="collapse2_15" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_15">
                             <div class="panel-body">
                                 <p class="mbr-fonts-style panel-text display-7"><strong>זה הרוב תלוי בך, אני יכול להקים אתר ב7 ימים. הכול משתנה בין אדם לאדם<br>אם זה אדם חרוץ שמשקיע על האתר שלו כל יום שלוח תכנים <br>ומבצע מה שאני דורש ממנו זה בערך שבוע . אך לפעמים יכול לקחת יותר<br>אם זה מישהו שמורח את הזמן זה יכול לקחת לפעמים גם חודש<br></strong>!<strong>הכל תלוי בך</strong><br></p>
                             </div>
@@ -599,14 +599,14 @@
                     </div>
                     <div class="card">
                         <div class="card-header" role="tab" id="headingThree">
-                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse3_10" aria-expanded="false" aria-controls="collapse3">
+                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse3_15" aria-expanded="false" aria-controls="collapse3">
                                 <h4 class="panel-title-edit mbr-fonts-style display-5" style="text-align:right"><p><strong>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; איך יש לך זמן לשלב גם לימודים וגם עבודה</strong></p></h4>
                                 <span class="icon-wrapper">
                                     <span class="sign mbr-iconfont mobi-mbri-plus mobi-mbri"></span>
                                 </span>
                             </a>
                         </div>
-                        <div id="collapse3_10" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_10">
+                        <div id="collapse3_15" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_15">
                             <div class="panel-body">
                                 <p class="mbr-fonts-style panel-text display-7"><strong>אז השאלה הזאת מאוד נפוצה התשובה היא פשוטה אני
 <br>בן אדם חרוץ שמשקיע בכל דבר שאני מתחיל בחיים לא עוזב
@@ -616,14 +616,14 @@
                     </div>
                     <div class="card">
                         <div class="card-header" role="tab" id="headingFour">
-                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse4_10" aria-expanded="false" aria-controls="collapse4">
+                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse4_15" aria-expanded="false" aria-controls="collapse4">
                                 <h4 class="panel-title-edit mbr-fonts-style display-5"><p><strong>איך אתה מתמודד עם בעיות טכניות שעלולות להתרחש בזמן בנייה של אתר</strong></p></h4>
                                 <span class="icon-wrapper">
                                     <span class="sign mbr-iconfont mobi-mbri-plus mobi-mbri"></span>
                                 </span>
                             </a>
                         </div>
-                        <div id="collapse4_10" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingFour" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_10">
+                        <div id="collapse4_15" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingFour" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_15">
                             <div class="panel-body">
                                 <p class="mbr-fonts-style panel-text display-7"><strong>בדרך כלל אני מצליח להסתדר עם הכול ואם אני לא מצליח יש לי חברים בתחום שמבינים ובנוים גם</strong></p>
                             </div>
@@ -631,14 +631,14 @@
                     </div>
                     <div class="card">
                         <div class="card-header" role="tab" id="headingFive">
-                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse5_10" aria-expanded="false" aria-controls="collapse5">
+                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse5_15" aria-expanded="false" aria-controls="collapse5">
                                 <h4 class="panel-title-edit mbr-fonts-style display-5"><strong>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; יש לך תיק עבודות</strong></h4>
                                 <span class="icon-wrapper">
                                     <span class="sign mbr-iconfont mobi-mbri-plus mobi-mbri"></span>
                                 </span>
                             </a>
                         </div>
-                        <div id="collapse5_10" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingFive" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_10">
+                        <div id="collapse5_15" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingFive" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_15">
                             <div class="panel-body">
                                 <p class="mbr-fonts-style panel-text display-7"><strong>אז כן יש לי תיק עבודות ואתר אחד שעומד וכמה בתהליכי הרמה ועוד אתרים שבניתי&nbsp;</strong><br><strong>לדוגמאות ועוד</strong></p>
                             </div>
