--- a/התהליך והמחיר.html
+++ b/התהליך והמחיר.html
@@ -23,13 +23,13 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/animatecss/animate.css">
   <link rel="stylesheet" href="assets/chatbutton/floating-wpp.css">
-  <link rel="stylesheet" href="assets/popup-overlay-plugin/style.css">
-    <link rel="stylesheet" href="assets/dropdown/css/style.css">
+    <link rel="stylesheet" href="assets/popup-overlay-plugin/style.css">
+  <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Assistant:200,300,400,500,600,700,800&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Assistant:200,300,400,500,600,700,800&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=cxnWl6"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=cxnWl6" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=xkUhtO"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=xkUhtO" type="text/css">
 
   
   
@@ -80,7 +80,7 @@
                     </li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#list01-d">שאלות נפוצות</a></li>
                     <li class="nav-item">
                         <a class="nav-link link text-primary display-4" href="index.html#contacts01-3">צרו קשר</a>
-                    </li><li class="nav-item dropdown open">
+                    </li><li class="nav-item dropdown">
                         <a class="nav-link link text-primary dropdown-toggle display-4" href="file:///C:/Users/%D7%9C%D7%99%D7%A2%D7%93%20%D7%A9%D7%9B%D7%98%D7%A8/AppData/Local/Mobirise.com/Mobirise/amitshechter6630_0040gmail_002ecom/addons/agentm5/components/index.html" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="true">אודות</a><div class="dropdown-menu" aria-labelledby="dropdown-774"><a class="text-primary dropdown-item display-4" style="text-align:right" href="index.html#header01-g">מי אני<br></a><a class="text-primary show dropdown-item display-4" style="text-align:right" href="index.html#features1-1">למה אצלי</a><a class="text-primary show dropdown-item display-4" style="text-align:right" href="index.html#features3-6">עם  מה  אני  בא<br></a></div>
                     </li></ul>
                 
