--- a/התהליך והמחיר.html
+++ b/התהליך והמחיר.html
@@ -23,13 +23,13 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/animatecss/animate.css">
   <link rel="stylesheet" href="assets/chatbutton/floating-wpp.css">
-  <link rel="stylesheet" href="assets/popup-overlay-plugin/style.css">
-    <link rel="stylesheet" href="assets/dropdown/css/style.css">
+    <link rel="stylesheet" href="assets/popup-overlay-plugin/style.css">
+  <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Assistant:200,300,400,500,600,700,800&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Assistant:200,300,400,500,600,700,800&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=uhK4JY"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=uhK4JY" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=2admLr"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=2admLr" type="text/css">
 
   
   
@@ -76,7 +76,7 @@
             </div>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item dropdown">
-                        <a class="nav-link link text-primary dropdown-toggle show display-4" href="page1.html#header02-1" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">&nbsp; התהליך והמחיר</a><div class="dropdown-menu show" aria-labelledby="dropdown-981" data-bs-popper="none"><a class="text-primary dropdown-item display-4" style="text-align:right" href="התהליך והמחיר.html#header12-h">הסבר קצר על התהליך</a><a class="text-primary dropdown-item display-4" style="text-align:right" href="התהליך והמחיר.html#features03-3">?מהי התחייבות שלכם </a><a class="text-primary dropdown-item display-4" style="text-align:right" href="התהליך והמחיר.html#pricing01-d">המחירים</a></div>
+                        <a class="nav-link link text-primary dropdown-toggle display-4" href="page1.html#header02-1" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">&nbsp; התהליך והמחיר</a><div class="dropdown-menu" aria-labelledby="dropdown-981"><a class="text-primary dropdown-item display-4" style="text-align:right" href="התהליך והמחיר.html#header12-h">הסבר קצר על התהליך</a><a class="text-primary dropdown-item display-4" style="text-align:right" href="התהליך והמחיר.html#features03-3">?מהי התחייבות שלכם </a><a class="text-primary dropdown-item display-4" style="text-align:right" href="התהליך והמחיר.html#pricing01-d">המחירים</a></div>
                     </li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#list01-d">שאלות נפוצות</a></li>
                     <li class="nav-item">
                         <a class="nav-link link text-primary display-4" href="index.html#contacts01-3">צרו קשר</a>
@@ -112,8 +112,7 @@
 <br>איסוף רעיונות ודרישות: אילו פונקציות ותכונות תרצה לכלול באתר? דפים, תמונות, טפסים, תכנים מרובים ועוד
 <br>
 <br>:עיצוב
-<br>בחירת עיצוב ופריסה: בחירת עיצוב כוללת את הצבעים, הגופנים, תמונות וכלי נוספים. ישנם מספר כלים ופלטפורמות לבניית אתרים, וניתן גם להשתמש בשירותי עיצוב מוכנים.
-<br>
+<br>בחירת עיצוב ופריסה: בחירת עיצוב כוללת את הצבעים, הגופנים, תמונות וכלי נוספים. ישנם מספר כלים ופלטפורמות לבניית אתרים, וניתן גם להשתמש בשירותי עיצוב מוכנים<br>
 <br>:פיתוח
 <br>קידוד ותכנות: בניית האתר דורשת יכולות תכנות. שפות תכנות נפוצות כוללות<br>HTML, CSS, ו-JavaScript.<br>&nbsp;יתר על כך, פלטפורמות כמו מספקות כלים וממשקים שפשוטים יותר לשימוש
 <br>
@@ -126,7 +125,7 @@
 <br>העלאת האתר: אחרי שכל ההכנות הן מוכנות, ניתן להעלות את האתר לשרת האינטרנט
 <br>
 <br>:תחזוקה ושדרוג
-<br>עדכונים ושדרוגים: עם הזמן, יתכן ותרצה להוסיף פונקציות חדשות, לשדרג את העיצוב, ולכן יש לקחת בחשבון עבודת <br>תחזוקה ושדרוג תדירים<br></strong></p>
+<br>עדכונים ושדרוגים: עם הזמן, יתכן ותרצה להוסיף פונקציות חדשות, לשדרג את העיצוב, ולכן יש לקחת בחשבון את שירותי&nbsp;</strong><br><strong>התחזוקה<br><br></strong></p>
                         
                     </div>
                 </div>
@@ -365,8 +364,8 @@
                                 <div class="price-wrapper">
                                     <div class="price-wrap">
                                       <div class="price-container">
-                                                <p class="original-price display-5"><strong>2700-2900</strong></p>
-                                                <p class="discount-price display-5"><strong>2500-2700</strong></p>
+                                                <p class="original-price display-5"><strong>3000-3800</strong></p>
+                                                <p class="discount-price display-5"><strong>2700-3300</strong></p>
                                             </div>
                                         <div class="mbr-section-btn"><a class="btn btn-primary display-4" href="index.html#form01-0"><span class="mobi-mbri mobi-mbri-right mbr-iconfont mbr-iconfont-btn"></span>תשיארו פניה</a></div>
                                     </div>
